# ATEAMS

./: .gitignore  CITATION.cff  Makefile  README.md  docs.sh  pyproject.toml  requirements  requirements.txt  setup.py  setup.sh
ateams/: Chain.py  Tape.py  __init__.py  common.h  common.pxd  common.py  index.md
ateams/arithmetic/: .gitignore  BuiltinWrapper.pxd  BuiltinWrapper.pyx  Fast.pyx  FastSample.h  FastSample.pxd  LinBoxMethods.cpp  LinBoxMethods.h  LinBoxMethods.pxd  LinBoxWrapper.pxd  LinBoxWrapper.pyx  MatrixReduction.pxd  MatrixReduction.pyx  PHATMethods.cpp  PHATMethods.h  PHATMethods.pxd  PHATWrapper.pxd  PHATWrapper.pyx  (+36 more)
docs/: Chain.html  Tape.html  index.html
test/: .testset.json  .vars  Bernoulli.py  Glauber.py  IC.py  NH.py  Perm.py  Persistence.py  Profile.py  SW.py  _test.matrices.persistence.py  lattice.json  profile.arithmetic.persistence.py  profile.arithmetic.persistence.sh  profile.models.Bernoulli.py  profile.models.Bernoulli.sh  profile.models.Glauber.py  profile.models.Glauber.sh  profile.models.IC.py  profile.models.IC.sh  profile.models.IC.slurm  profile.models.IC.slurm.sh  profile.models.NH.py  profile.models.NH.sh  profile.models.SW.py  profile.models.SW.sh  test.arithmetic.FastSample.py  test.arithmetic.bettis.py  test.arithmetic.bettis.sh  test.arithmetic.giant.py  test.arithmetic.matrices.py  test.arithmetic.matrices.sh  test.arithmetic.persistence  test.arithmetic.persistence.cpp  test.arithmetic.persistence.py  test.arithmetic.persistence.sh  test.arithmetic.py  test.compression.py  test.models.Glauber.py  test.models.IC.py  (+3 more)
(+138 files in other folders)
