
[build-system]
requires = ["Cython", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ateams"
version = "2.0.0"
description = "Algebraic Topology-Enabled AlgorithMs for Spin systems"
readme = "README.md"

requires-python = ">=3.8"
dependencies = [
    "scipy",
    "Cython",
    "jsonlines",
    "setuptools",
    "wheel",
    "pybind11",
    "phat",
    "numpy",
    "packaging"
]

[tool.setuptools]
py-modules = ["ateams"]
