
[build-system]
requires = ["Cython", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ateams"
version = "2.0.1"
description = "Algebraic Topology-Enabled AlgorithMs for Spin systems"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "Cython",
    "jsonlines",
    "numpy",
    "packaging"
]

[tool.setuptools]
py-modules = ["ateams"]
